--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^4.16.1
   firebase_auth: ^4.19.4
   firebase_core: ^2.30.1
+  firebase_storage: ^11.7.5
 
 dev_dependencies:
   flutter_test:
