--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^4.19.4
   firebase_core: ^2.30.1
   firebase_storage: ^11.7.5
+  path: ^1.9.0
+  image_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
