--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   path: ^1.9.0
   image_picker: ^1.1.1
   geocoding: ^3.0.0
-  geolocator: ^11.0.0
+  geolocator: ^12.0.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
