--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,7 +27,6 @@ if (flutterVersionName == null) {
 
 apply from: project(':flutter_config').projectDir.getPath() + "/dotenv.gradle"
 
-
 android {
     namespace "com.example.notes"
     compileSdk flutter.compileSdkVersion
@@ -51,7 +50,7 @@ android {
         applicationId "com.example.notes"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 20
+        minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
